--- a/packages/main/pubspec.yaml
+++ b/packages/main/pubspec.yaml
@@ -39,8 +39,6 @@ dependencies:
         path: ../google_mlkit_pose_detection
     google_mlkit_selfie_segmentation:
         path: ../google_mlkit_selfie_segmentation
-    google_mlkit_text_recognition:
-        path: ../google_mlkit_text_recognition
 
     google_mlkit_entity_extraction:
         path: ../google_mlkit_entity_extraction
@@ -54,6 +52,9 @@ dependencies:
     firebase_auth: ^5.1.0
     google_sign_in: ^6.2.1
     lottie: ^3.1.2
+    flutter_bloc: ^8.1.6
+    cloud_firestore: ^5.0.1
+    intl: ^0.19.0
 
 dev_dependencies:
     flutter_lints: ^3.0.2
